--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   firebase_core: "0.5.0"
   image_picker: ^0.6.7+11
   firebase_auth: "^0.18.0+1"
+  provider: ^4.3.2+2
 
 dev_dependencies:
   flutter_test:
