--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
-  firebase_core: "0.5.0"
+  firebase_core: "^0.5.0+1"
   firebase_auth: "^0.18.0+1"
   image_picker: ^0.6.7+11
   provider: ^4.3.2+2
   cloud_firestore: "^0.14.0+2"
   firebase_storage: ^4.0.1
+  firebase_database: "^4.1.1"
+  location: ^3.0.2
 
 
 dev_dependencies:
